@@ -64,15 +64,15 @@
     </head>
     <body>
         <title>Galerie Teaser</title>
-        <cluster area="id-a2dff7f3-9042-4a6f-b88d-143fdfc5cff3" visible="True">
-            <region area="id-6280c8ee-b68e-40dd-a117-4d676e282599" visible="True" kind="solo">
-                <container cp:__name__="id-622112b4-de48-4198-aac9-fa71dbde397a" cp:type="teaser" hide-dupes="True" module="leader-fullwidth" visible="True">
-                    <block author="Test Mann" contenttype="article" date-first-released="" date-last-modified="2015-03-05T13:38:06+00:00" date-last-published="" expires="" href="http://xml.zeit.de/zeit-online/cp-content/article-01" issue="26" last-semantic-change="2015-03-05T13:32:17.683587+00:00" publication-date="" ressort="Politik" uniqueId="http://xml.zeit.de/zeit-online/cp-content/article-01" year="2008"></block>
+        <cluster visible="True" area="id-d102845f-8aa2-4305-a731-81efaf03919f">
+            <region visible="True" area="id-c8a4bedc-5721-412f-994f-c55fb03955d2" kind="duo">
+                <container cp:type="teaser" module="zon-square" visible="True" hide-dupes="True" cp:__name__="id-a560c834-fa2e-4d35-a540-c55fb03955d2">
+                    <block href="http://xml.zeit.de/zeit-online/gallery/weltall" uniqueId="http://xml.zeit.de/zeit-online/gallery/weltall" year="2015" issue="7" ressort="zeit-magazin" contenttype="gallery"></block>
                 </container>
             </region>
         </cluster>
         <cluster visible="True" area="id-6f4ded13-7461-4197-804c-db3d668fa993" title="Fotostrecken" kind="gallery">
-            <region visible="True" hide-dupes="False" area="id-5fe59e73-e388-42a4-a8d4-750b0bf96812" kind="gallery" title="Fotostrecken" count="2" automatic="True" automatic_type="centerpage">
+            <region visible="True" hide-dupes="True" area="id-5fe59e73-e388-42a4-a8d4-750b0bf96812" kind="gallery" title="Fotostrecken" count="2" automatic="True" automatic_type="centerpage">
                 <referenced_cp>http://xml.zeit.de/foto/index</referenced_cp>
                 <container cp:type="auto-teaser" module="zon-gallery" visible="True" cp:__name__="id-7b76790b-cf36-b49f-8343-0069411a8c5b"/>
                 <container cp:type="auto-teaser" module="zon-gallery" visible="True" cp:__name__="id-a9cb1735-6a36-2401-afef-6e19baf544e3"/>
