@@ -8,6 +8,8 @@ Change log for zeit.web
 
 - ZON-2167: Return correctly spelled ressort names to app wrapper
 
+- ZON-2238: Allow duplicate hiding in automatic gallery area
+
 
 2.18 (2015-10-26)
 -----------------
